--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
           </div>
           <div class="col-lg-4">
             <p>
-              <strong>Phone :</strong> +91 7001423035<br/>
-              <strong>Email :</strong> <a href="mailto:craftyard1904@gmail.com"> craftyard1904@gmail.com</a><br>
+              <strong>Phone :</strong> <span style="font-family: Arial, Helvetica, sans-serif;"> +91 7001423035</span> <br/>
+              <strong>Email :</strong> <a href="mailto:craftyard1904@gmail.com"> <span style="font-family: Arial, Helvetica, sans-serif;">craftyard1904@gmail.com</span></a><br>
             </p>
               <div class="social-links mt-3">
                 <!-- <a href="https://twitter.com/test" class="twitter"><i class="bx bxl-twitter"></i></a> -->
