--- a/index.html
+++ b/index.html
@@ -11,15 +11,8 @@
 	<meta name="keywords" content="ARTYARD, Payel, Artisan, Craft, handmade, paintings, oil painting, water colour painting, acrylic paintings, wall paintings, portrait, madhubani, digital art, digital painting, illustration" />
 	<meta name="author" content="ARTYARD Artisan Payel" />  
 
-  <meta property="og:image" content="http://artyard.github.io/content/images/logo.png">  
+  <meta property="og:image" itemprop="image" content="http://artyard.github.io/content/images/logo.png">  
 
-  <!-- Facebook and Twitter integration -->
-<!-- <meta property="og:title" content="ARTYARD" />
-<meta property="og:image" itemprop="image" content="http://www.cessi.in/solareclipse2019/transparent_coronal_map_final_small-min.png"/>
-<meta property="og:url" content="http://www.cessi.in/index.html" />
-<meta property="og:type" content="article"/>
-<meta property="og:site_name" content="Center of Excellence in Space Sciences India" />
-<meta property="og:description" content="Center of Excellence in Space Sciences India" /> -->
 
    
 <!-- ########################################## SEO ####################################################### -->
