--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
   <meta property="og:image" itemprop="image" content="http://artyard.github.io/content/images/logo.png">  
 
+<meta property="og:site_name" content="ARTYARD">
+<meta property="og:title" content="ARTYARD" />
+<meta property="og:description" content=content="ARTYARD !!!!  We have a wide range of original handmade paintings in different mediums such as oil painting water colour, acrylic paintings and in charcoal figurative paintings in different styles like abstract, Indian folk, madhubani, mix media, contemporary painting, decorative hand craft items and you can also get your photos to beautiful personalized portraits in water colour, charcoal, colour pencil, pencil sketch . You can choose your portrait in different style, size, price order." />
+<meta property="og:image" itemprop="image" content="http://artyard.github.io/content/images/logo.png">
+<meta property="og:type" content="website" />
+<meta property="og:updated_time" content="1595173119" />
 
    
 <!-- ########################################## SEO ####################################################### -->
